testdata/typechecker/error/multidim/Array2.java
int main() {
    int[][] a;
    a = new int[false][2+5];
    return 0;
}